--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ Django==5.0.12
 django-dotenv==1.4.2
 django-mssql-backend==2.8.1
 djangorestframework==3.15.2
+djangorestframework_simplejwt==5.4.0
 drf-yasg==1.21.8
 inflection==0.5.1
 mssql-django==1.5
 packaging==24.2
+PyJWT==2.10.1
 pyodbc==5.2.0
 pytz==2025.1
 PyYAML==6.0.2
