--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.8.1
+beautifulsoup4==4.13.3
 boto3==1.36.21
 botocore==1.36.21
 build==1.2.2.post1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 Django==5.0.12
 django-dotenv==1.4.2
 django-mssql-backend==2.8.1
@@ -9,6 +12,7 @@ djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 drf-yasg==1.21.8
 gunicorn==23.0.0
+idna==3.10
 inflection==0.5.1
 jmespath==1.0.1
 mssql-django==1.5
@@ -20,10 +24,13 @@ pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 pytz==2025.1
 PyYAML==6.0.2
+requests==2.32.3
 s3transfer==0.11.2
 setuptools==75.8.0
 six==1.17.0
+soupsieve==2.6
 sqlparse==0.5.3
+typing_extensions==4.12.2
 tzdata==2025.1
 uritemplate==4.1.1
 urllib3==2.3.0
