--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ inflection==0.5.1
 jmespath==1.0.1
 packaging==24.2
 pillow==11.1.0
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
